kuber-homeworks/8/files/task2/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: multi-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      group: deploy
  template:
    metadata:
      labels:
        group: deploy
    spec:
      containers:
      - name: nginx
        image: nginx:1.27
        ports:
        - containerPort: 80
        volumeMounts:
        - name: nginx-html
          mountPath: /usr/share/nginx/html/
      volumes:
      - name: nginx-html
        configMap:
          name: nginx-html
...
