kuber-homeworks/8/files/task2/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  selector:
      group: deploy
  ports:
  - name: nginx
    protocol: TCP
    port: 80
    targetPort: 80
...
